--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "homepage": "https://jshag90.github.io/kids-zoom/",
-  "script": {
+  "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
